// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Footer snapshot renders light theme without change 1`] = `
<div>
  <footer
    class="footer"
  >
    <div
      class="footer-content"
    >
      <svg
        data-testid="brand-logo"
      />
      <span
        class="footer-brand-text"
        style="font-weight: bold; font-size: 18px; vertical-align: middle;"
      >
        BX Finance
         Demo
      </span>
      <span
        class="footer-copyright"
        style="margin-left: 16px; font-size: 14px;"
      >
        © 
        2026
         All rights reserved.
      </span>
      <button
        class="footer-theme-toggle"
        title="Switch to dark mode"
        type="button"
      >
        🌙 Dark
      </button>
      <a
        class="footer-demo-config"
        href="/demo-data"
        title="Sandbox accounts, balances, MFA threshold"
      >
        Demo config
      </a>
    </div>
  </footer>
</div>
`;

exports[`Footer snapshot renders without user (logged out) without change 1`] = `
<div>
  <footer
    class="footer"
  >
    <div
      class="footer-content"
    >
      <svg
        data-testid="brand-logo"
      />
      <span
        class="footer-brand-text"
        style="font-weight: bold; font-size: 18px; vertical-align: middle;"
      >
        BX Finance
         Demo
      </span>
      <span
        class="footer-copyright"
        style="margin-left: 16px; font-size: 14px;"
      >
        © 
        2026
         All rights reserved.
      </span>
      <button
        class="footer-theme-toggle"
        title="Switch to dark mode"
        type="button"
      >
        🌙 Dark
      </button>
    </div>
  </footer>
</div>
`;
